--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,19 +1,20 @@
--#  This file is app/views/movies/index.html.haml
-%h1 All Movies
- 
+-# in app/views/movies/index.html.haml
+%h3 All Movies
+
 %table#movies
   %thead
     %tr
       %th Movie Title
       %th Rating
-      %th Release Date
+      %th Relsease Date
       %th More Info
   %tbody
-    - @movies.each do |movie|
+    -@movies.each do |movie|
       %tr
         %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-
-
+-# debug(@movies)
+-# raise @movies.inspect
+-# raise params.inspect
