--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -15,6 +15,8 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
+
+= link_to "Add a New Movie", new_movie_path
 -# debug(@movies)
 -# raise @movies.inspect
 -# raise params.inspect
