--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -9,8 +9,12 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d %Y")
-%h3 Description
+
+%h3 Description:
 
 %p#description= @movie.description
 
+-# modify last 2 lines of app/views/movies/show.html.haml to:
+= link_to 'Edit info', edit_movie_path(@movie)
 = link_to 'Back to movie list', movies_path
+= link_to "Delete", movie_path(@movie), :method => :delete
