--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
 		= csrf_meta_tags
 		
 	%body
+		%div#banner= link_to 'RottenPotatoes', '/' 
 		-# this goes just inside %body:
 		- if flash[:notice]
 			#notice.message= flash[:notice]
