edit applicaiton.html to include movies.css

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
 	%html
 		%title RottenPotatoes!
 		= stylesheet_link_tag 'application'
+		= stylesheet_link_tag 'movies'
 		= javascript_include_tag 'application'
 		= csrf_meta_tags
 		
