--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -9,8 +9,15 @@
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
  
   = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = date_select :movie, :release_date, :start_year => 1930
  
   = submit_tag 'Save Changes'
 
-= button_to 'Cancel', movies_path, :method => :get
+- my_path = movies_path
+- if @movie
+  - if @movie.new_record?
+    - my_path = movies_path
+  - else
+    - my_path = movie_path(@movie)
+
+= button_to 'Cancel', my_path, :method => :get
