--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -1,26 +1,7 @@
 %h2 Edit Movie
  
 = form_tag movie_path(@movie), :method => :put do
- 
-  = label :movie, :title, 'Title'
-  = text_field :movie, 'title'
- 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
- 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date, :start_year => 1930
- 
-  = label :movie, :description
-  = text_field :movie, :description
-
+  = render :partial => 'movie_form' 
   = submit_tag 'Save Changes'
 
-- my_path = movies_path
-- if @movie
-  - if @movie.new_record?
-    - my_path = movies_path
-  - else
-    - my_path = movie_path(@movie)
-
-= button_to 'Cancel', my_path, :method => :get
+= render :partial => 'cancel'
