--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -10,15 +10,7 @@
       %th Relsease Date
       %th More Info
   %tbody
-    -@movies.each_with_index do |movie, index|
-      %tr
-        %td= index
-        %td
-          = link_to "#{movie.title}", edit_movie_path(movie); 
-          = button_to "Delete", movie_path(movie), :method => :delete, :confirm => "are you sure?"
-        %td= movie.rating
-        %td= movie.release_date
-        %td= link_to "More about #{movie.title}", movie_path(movie)
+    = render :partial => 'movie', :collection => @movies
 = link_to "Add a New Movie", new_movie_path
 -# debug(@movies)
 -# raise @movies.inspect
