--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html
 	%html
+		= render :partial=>'sessions/login'
 		%title RottenPotatoes!
 		= stylesheet_link_tag 'application'
 		= stylesheet_link_tag 'movies'
