--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -1,5 +1,5 @@
 table#movies tr:hover{
-  background-color: green
+  background-color: green;
 }
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
