--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -1,6 +1,6 @@
-table#movies tr:hover{
-  background-color: green;
-}
+//table#movies tr:hover{
+//  background-color: green;
+//}
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
