--- a/app/views/movies/_movie.html.haml
+++ b/app/views/movies/_movie.html.haml
@@ -1,4 +1,4 @@
-%tr
+%tr{:class => ('adult' unless movie.rating =~ /^G|PG$/)}
   %td= movie_counter
   %td
     = link_to "#{movie.title}", edit_movie_path(movie); 
